--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "jquery": "^3.4.1",
+    "jquery.maskedinput": "^1.4.1",
     "paginationjs": "^2.1.5",
     "pug": "^2.0.4"
   },
