--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "ion-rangeslider": "^2.3.1",
     "jquery": "^3.4.1",
     "jquery.maskedinput": "^1.4.1",
     "paginationjs": "^2.1.5",
