--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "ion-rangeslider": "^2.3.1",
+    "item-quantity-dropdown": "^2.1.0",
     "jquery": "^3.4.1",
     "jquery.maskedinput": "^1.4.1",
     "paginationjs": "^2.1.5",
