--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "air-datepicker": "^2.2.3",
     "ion-rangeslider": "^2.3.1",
     "item-quantity-dropdown": "^2.1.0",
     "jquery": "^3.4.1",
