--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "air-datepicker": "^2.2.3",
+    "chart.js": "^2.9.3",
     "ion-rangeslider": "^2.3.1",
     "item-quantity-dropdown": "^2.1.0",
     "jquery": "^3.4.1",
