--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "parcel src/pages/room-details/room-details.pug"
+
   },
   "keywords": [],
   "author": "",
@@ -17,7 +19,8 @@
     "jquery": "^3.4.1",
     "jquery.maskedinput": "^1.4.1",
     "paginationjs": "^2.1.5",
-    "pug": "^2.0.4"
+    "pug": "^2.0.4",
+    "parcel-bundler": "^1.12.4"
   },
   "devDependencies": {
     "sass": "^1.25.0"
