--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "parcel src/pages/room-details/room-details.pug"
-
+    "dev": "parcel src/pages/room-details/room-details.pug",
+    "form": "parcel src/pages/form-elements/form-elements.pug"
   },
   "keywords": [],
   "author": "",
@@ -19,10 +19,10 @@
     "jquery": "^3.4.1",
     "jquery.maskedinput": "^1.4.1",
     "paginationjs": "^2.1.5",
-    "pug": "^2.0.4",
-    "parcel-bundler": "^1.12.4"
+    "pug": "^2.0.4"
   },
   "devDependencies": {
+    "parcel-bundler": "^1.12.4",
     "sass": "^1.25.0"
   }
 }
